--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/GabrielLeonte/Glaciary.JS#readme",
   "dependencies": {
+    "chalk": "^2.4.2",
     "fs-extra": "^8.1.0",
     "socket.io": "^2.2.0"
   }
