--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
       - run:
           name: cd-to-test
           command: cd .circleci/test-app
+          - run:
+          name: ls
+          command: ls
       - run:
           name: install
           command: npm install
