--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - ./node_modules
       - run:
           name: install
-          command: test/npm install
+          command: cd test && npm install
       - run:
           name: start
-          command: test/npm start
+          command: cd test && npm start
