--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/test
+    working_directory: ~/
     docker:
       - image: circleci/node:10.16.0
     steps:
